# multi-llm-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoint/: 2026-03-10__multi-llm-reviewer__misc.md  2026-03-14__multi-llm-reviewer__misc.md
doc/: pre_llm_check_design.md  refactoring_plan.md  streaming_design.md
src/: auto_fix_loop.py  review_all.py
src/cli/: autofix.py
src/core/: git_utils.py  llm_client.py
src/multi_llm_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/multi_llm_reviewer/cli/: autofix.py  review.py
src/multi_llm_reviewer/core/: config.py  git_utils.py  llm_client.py  local_llm_client.py
src/multi_llm_reviewer/prompts/: fix_design_prompt.txt  fix_implementation_prompt.txt  review_prompt.txt  review_prompt_red_team.txt
src/multi_llm_reviewer/services/: fix_service.py  pre_check_service.py  review_service.py
src/services/: fix_service.py  review_service.py
tests/: test_autofix.py  test_review.py
tests/test_core/: test_config.py  test_git_utils.py  test_github_utils.py  test_llm_client.py  test_local_llm_client.py  test_stream_manager.py
tests/test_services/: test_fix_service.py  test_pre_check_service.py  test_review_service.py
