[project]
name = "multi-llm-reviewer"
version = "0.1.0"
description = "Multi-LLM Code Reviewer & Auto-Fixer CLI"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Aoitan", email = "aoitan@example.com" }
]
license = { text = "MIT" }
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
llm-review = "multi_llm_reviewer.cli.review:main"
llm-fix = "multi_llm_reviewer.cli.autofix:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
